choreonoid_add_simple_controller(MonoCrawlerJoystickController MonoCrawlerJoystickController.cpp)

choreonoid_add_simple_controller(LeakedLineController LeakedLineController.cpp)
target_link_libraries(LeakedLineController CnoidSceneEffectsPlugin)

choreonoid_add_simple_controller(StorageController StorageController.cpp)
choreonoid_add_simple_controller(BreakerBoxController BreakerBoxController.cpp)