choreonoid_add_simple_controller(StorageController StorageController.cpp)
choreonoid_add_simple_controller(BreakerBoxController1 BreakerBoxController1.cpp)
choreonoid_add_simple_controller(BreakerBoxController2 BreakerBoxController2.cpp)
choreonoid_add_simple_controller(Jaco2Controller1 Jaco2Controller1.cpp)
choreonoid_add_simple_controller(Jaco2Controller2 Jaco2Controller2.cpp)

if(BUILD_SCENE_EFFECTS_PLUGIN)
  choreonoid_add_simple_controller(FireController1 FireController1.cpp)
  target_link_libraries(FireController1 CnoidSceneEffectsPlugin)
  choreonoid_add_simple_controller(FireController2 FireController2.cpp)
  target_link_libraries(FireController2 CnoidSceneEffectsPlugin)
  choreonoid_add_simple_controller(HoseNozzleController1 HoseNozzleController1.cpp)
  target_link_libraries(HoseNozzleController1 FireController1)
  choreonoid_add_simple_controller(HoseNozzleController2 HoseNozzleController2.cpp)
  target_link_libraries(HoseNozzleController2 FireController2)

  choreonoid_add_simple_controller(LeakedLineController1 LeakedLineController1.cpp)
  target_link_libraries(LeakedLineController1 CnoidSceneEffectsPlugin)
  choreonoid_add_simple_controller(LeakedLineController2 LeakedLineController2.cpp)
  target_link_libraries(LeakedLineController2 CnoidSceneEffectsPlugin)
  choreonoid_add_simple_controller(LeakedLineController3 LeakedLineController3.cpp)
  target_link_libraries(LeakedLineController3 CnoidSceneEffectsPlugin)
  choreonoid_add_simple_controller(LeakedLineController4 LeakedLineController4.cpp)
  target_link_libraries(LeakedLineController4 CnoidSceneEffectsPlugin)
  choreonoid_add_simple_controller(LeakedLineController5 LeakedLineController5.cpp)
  target_link_libraries(LeakedLineController5 CnoidSceneEffectsPlugin)
  choreonoid_add_simple_controller(LeakedLineController6 LeakedLineController6.cpp)
  target_link_libraries(LeakedLineController6 CnoidSceneEffectsPlugin)
  choreonoid_add_simple_controller(LeakedLineController7 LeakedLineController7.cpp)
  target_link_libraries(LeakedLineController7 CnoidSceneEffectsPlugin)
  choreonoid_add_simple_controller(LeakedLineController8 LeakedLineController8.cpp)
  target_link_libraries(LeakedLineController8 CnoidSceneEffectsPlugin)
  choreonoid_add_simple_controller(LeakedLineController9 LeakedLineController9.cpp)
  target_link_libraries(LeakedLineController9 CnoidSceneEffectsPlugin)
  choreonoid_add_simple_controller(LeakedLineController10 LeakedLineController10.cpp)
  target_link_libraries(LeakedLineController10 CnoidSceneEffectsPlugin)
endif()