choreonoid_add_simple_controller(StorageController StorageController.cpp)
choreonoid_add_simple_controller(BreakerBoxController BreakerBoxController.cpp)

if(BUILD_SCENE_EFFECTS_PLUGIN)
  choreonoid_add_simple_controller(LeakedLineController LeakedLineController.cpp)
  target_link_libraries(LeakedLineController CnoidSceneEffectsPlugin)
endif()